# Render

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json
.cache/clangd/index/: Camera.cpp.A67C210F4EA29871.idx  Camera.h.8B6A96CD801F9C37.idx  CameraSettings.h.CA6409FE5BD23662.idx  Chunk.cpp.FD74D7B70E9090D6.idx  Chunk.h.D07C5FE236DF32AA.idx  Core.cpp.5AD56600FBB80893.idx  Core.h.DDCF9EAB8CCC0879.idx  Debug.cpp.252A2CCECFCFB9BE.idx  Debug.h.63DB7081BE624BE8.idx  EBO.cpp.BD01527C3C84A7E1.idx  EBO.h.E6440AC6A2998308.idx  Geometry.cpp.F9D50EED199F0EDF.idx  Geometry.h.95CCD5EB8269F04A.idx  Indices.cpp.09BFA1B819FA6167.idx  Indices.h.85B03389DFE3B52B.idx  Keys.cpp.D0E7965289D73BD5.idx  Keys.h.18B3990756DA8D94.idx  Logging.cpp.5801D79826C8CA5F.idx  Logging.h.81F12A69A550C403.idx  Mouse.cpp.9F38EF470ED001BB.idx  Mouse.h.E3274451288F5F73.idx  Move.cpp.E938299435A39F64.idx  Move.h.3CA9B4EF72DC184E.idx  Program.cpp.5C0F0925F1A7CBC9.idx  Program.h.41A32BA853371E41.idx  Render.cpp.6E0E8DC6A81073A6.idx  Render.h.2F321DD7D68392C8.idx  Shader.cpp.4107B47630CA7BC4.idx  Shader.h.7475A8E865A37E67.idx  TerrainStorage.cpp.1E843984B470A39B.idx  TerrainStorage.h.2CBD7D0AD8B2F2F1.idx  Test.cpp.94B08131C58ACC7F.idx  VAO.cpp.498E6283163C8261.idx  VAO.h.5CA6413F4BE2740B.idx  VBO.cpp.9CB7753BF95B0DFC.idx  VBO.h.4E409AEEF09E624A.idx  Vertex.h.AA9059F46F398BA9.idx  VertexAttribute.h.DE360937D1D98896.idx  Visualiser.cpp.6D0F78415814BF3F.idx  Visualiser.h.EBB00D4EA73DEF84.idx  (+27 more)
render/: CMakeLists.txt
render/include/: Camera.h  EBO.h  Geometry.h  Shader.h  VAO.h  VBO.h  Vertex.h  VertexAttribute.h  keys.h  logging.h  mouse.h
render/include/Camera/: Camera.h  CameraSettings.h
render/include/Core/: Core.h
render/include/Geometry/: Geometry.h  Vertex.h
render/include/Init/: init.h
render/include/Input/: Keys.h  Mouse.h  keys.h  mouse.h
render/include/Memory/: EBO.h  VAO.h  VBO.h
render/include/Shaders/: Program.h  Shader.h
render/include/Window/: Window.h  window.h
render/src/: Camera.cpp  EBO.cpp  Geometry.cpp  Program.cpp  Shader.cpp  VAO.cpp  VBO.cpp  init.cpp  keys.cpp  logging.cpp  mouse.cpp  window.cpp
render/src/Camera/: Camera.cpp
render/src/Core/: Core.cpp
render/src/Geometry/: Geometry.cpp
render/src/Init/: init.cpp
render/src/Input/: Keys.cpp  Mouse.cpp  keys.cpp  mouse.cpp
render/src/Logging/: Logging.cpp  logging.cpp
render/src/Memory/: EBO.cpp  VAO.cpp  VBO.cpp
render/src/Shaders/: Program.cpp  Shader.cpp
render/src/Window/: Window.cpp  window.cpp
rendertest/: CMakeLists.txt  main.cpp
rendertest/include/: Chunk.h  ChunkMap.h  Debug.h  Indices.h  Map.h  Move.h  Render.h  TerrainStorage.h  Visualiser.h  Zoom.h  debug.h  indices.h  move.h  perlin_generator.h  terrain_generator.h  units.h  util.h  visualdebug.h  zoom.h
rendertest/resources/shaders/: fragment.glsl  vertex.glsl
rendertest/src/: Chunk.cpp  ChunkMap.cpp  Debug.cpp  Indices.cpp  Map.cpp  Move.cpp  Render.cpp  TerrainStorage.cpp  Test.cpp  Visualiser.cpp  Zoom.cpp  debug.cpp  indices.cpp  main.cpp  move.cpp  perlin_generator.cpp  terrain_generator.cpp  visualdebug.cpp  zoom.cpp
resources/Shaders/: vertex.glsl
resources/shaders/: vertex.glsl
src/: main.cpp
src/Camera/: Camera.cpp  Camera.h
src/Input/Keys/: Keys.cpp  Keys.h
src/Input/Mouse/: Mouse.cpp  Mouse.h
src/Logging/: Logging.cpp  Logging.h
src/Memory/: VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/Shaders/: Program.cpp  Program.h  Shader.cpp  Shader.h
src/Window/: Window.cpp  Window.h
